# foam

./: .gitignore  .gitmodules  .style.yapf  CMakeLists.txt  DOCKER_QUICKSTART.md  Dockerfile  README.md  acknowledgement_snippet.txt  external_dependency_third_party_licenses.txt  foam.py  pyproject.toml  python_third_party_licenses.txt  pyvenv.cfg  requirements.txt  setup.py  setup.sh  spherized.urdf  startup.sh  test.sph
.github/workflows/: wheels.yml
assets/: cage.urdf  cage2.urdf  spheres_scene.yaml  stretch.urdf
assets/baxter/: baxter (copy 1).urdf  baxter.urdf  baxter_spherized_1.urdf  baxter_spherized_8.urdf
assets/fetch/: fetch.urdf  fetch_backup.urdf  fetch_simple.urdf  fetch_spherized.urdf  fetch_spherized_1.urdf  fetch_spherized_6.urdf  fetch_spherized_8.urdf  spherized.urdf
assets/franka/: fp3_franka_hand.urdf
assets/panda/: panda.urdf
assets/xarm6/: xarm6.urdf  xarm6_spherized.urdf
cmake/: CompilerSettings.cmake  HelperFunctions.cmake
foam/: New_thickened_mesh.stl  __init__.py  thickened_mesh.stl
foam/model/: __init__.py
foam/utility/: __init__.py  redirect_stream.py
my_venv/: pyvenv.cfg
scripts/: common.py  fishman_urdf.py  generate_sphere_urdf.py  generate_spheres.py  low_res_1.stl  parse_sphere.py  spheres.py  spheres_from_urdf.py  spherized.urdf  test.py  tune_sphere_urdf.py  visualize.py  visualize_spheres.py
spheretree/: CMakeLists.txt
src/Surface/: InternalGem.cpp
uild/: CMakeCache.txt  build.ninja  cmake_install.cmake
